[#30426] Add OpenTitan_KMAC

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -403,6 +403,7 @@
     <Compile Include="Peripherals\CPU\ExecutionTracer.cs" />
     <Compile Include="Peripherals\CPU\Disassembler\LLVMDisassembler.cs" />
     <Compile Include="Peripherals\Miscellaneous\ISideloadableKey.cs" />
+    <Compile Include="Peripherals\Miscellaneous\OpenTitan_KMAC.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
