--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -537,6 +537,7 @@
     <Compile Include="Utilities\VmemReader.cs" />
     <Compile Include="Peripherals\I2C\DummyI2CSlave.cs" />
     <Compile Include="Peripherals\UART\IUARTWithBufferState.cs" />
+    <Compile Include="Utilities\SimpleFileCache.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
