--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -538,6 +538,7 @@
     <Compile Include="Peripherals\I2C\DummyI2CSlave.cs" />
     <Compile Include="Peripherals\UART\IUARTWithBufferState.cs" />
     <Compile Include="Utilities\SimpleFileCache.cs" />
+    <Compile Include="Utilities\FileLocker.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
