--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -545,6 +545,7 @@
     <Compile Include="Utilities\FileLocker.cs" />
     <Compile Include="Utilities\Binding\INativeUnwindable.cs" />
     <Compile Include="Utilities\Binding\ExceptionKeeper.cs" />
+    <Compile Include="Exceptions\RegisterValueUnavailableException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
