[#32448] Add INativeUnwindable and implement it in TranslationCPU

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -539,6 +539,7 @@
     <Compile Include="Peripherals\UART\IUARTWithBufferState.cs" />
     <Compile Include="Utilities\SimpleFileCache.cs" />
     <Compile Include="Utilities\FileLocker.cs" />
+    <Compile Include="Utilities\Binding\INativeUnwindable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
