[#33070] Precompile Python scripts before running

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -547,6 +547,7 @@
     <Compile Include="Utilities\Binding\ExceptionKeeper.cs" />
     <Compile Include="Exceptions\RegisterValueUnavailableException.cs" />
     <Compile Include="Utilities\FilePath.cs" />
+    <Compile Include="Peripherals\CPU\CpuAbortException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
