[#33210] Add new PL011 UART model

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -417,6 +417,7 @@
     <Compile Include="Peripherals\Timers\S32K_LPTMR.cs" />
     <Compile Include="Peripherals\UART\TrivialUart.cs" />
     <Compile Include="Peripherals\Miscellaneous\AthenaX5200.cs" />
+    <Compile Include="Peripherals\UART\PL011.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
