--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -423,6 +423,7 @@
     <Compile Include="Peripherals\Miscellaneous\LiteX_MMCM_CSR32.cs" />
     <Compile Include="Peripherals\UART\SAMD20_UART.cs" />
     <Compile Include="Peripherals\Video\LiteX_Framebuffer_CSR32.cs" />
+    <Compile Include="Peripherals\UART\USBSerialPort_S3B.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
