--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -429,6 +429,7 @@
     <Compile Include="Peripherals\Video\LiteX_Framebuffer_CSR32.cs" />
     <Compile Include="Peripherals\UART\USBSerialPort_S3B.cs" />
     <Compile Include="Peripherals\Miscellaneous\MAX32650_GCR.cs" />
+    <Compile Include="Peripherals\UART\MAX32650_UART.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
