--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -432,6 +432,7 @@
     <Compile Include="Peripherals\UART\MAX32650_UART.cs" />
     <Compile Include="Peripherals\Timers\MAX32650_RTC.cs" />
     <Compile Include="Peripherals\Miscellaneous\MAX32650_PWRSEQ.cs" />
+    <Compile Include="Peripherals\DMA\STM32G0DMA.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
