--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -509,6 +509,7 @@
     <Compile Include="Utilities\GDB\PacketData.cs" />
     <Compile Include="Utilities\GDB\GdbStub.cs" />
     <Compile Include="Peripherals\CPU\ICpuSupportingGdb.cs" />
+    <Compile Include="Peripherals\CPU\ICPUWithMMU.cs" />
     <Compile Include="Peripherals\CPU\GDB\GDBTypeBitField.cs" />
     <Compile Include="Peripherals\CPU\GDB\GDBCustomType.cs" />
     <Compile Include="Peripherals\CPU\GDB\GDBFeatureDescriptor.cs" />
