--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Peripherals\CPU\ICPUWithMetrics.cs" />
     <Compile Include="Peripherals\CPU\ICPUWithExternalMmu.cs" />
     <Compile Include="Peripherals\CPU\ICPUWithMappedMemory.cs" />
+    <Compile Include="Peripherals\CPU\ICPUWithRegisters.cs" />
     <Compile Include="Peripherals\CPU\CPURegister.cs" />
     <Compile Include="Peripherals\CPU\IControllableCPU.cs" />
     <Compile Include="Utilities\ConfigurationManager.cs" />
