--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Utilities\IInterestingType.cs" />
     <Compile Include="Peripherals\CPU\ICPU.cs" />
     <Compile Include="Peripherals\CPU\ICPUWithExternalMmu.cs" />
+    <Compile Include="Peripherals\CPU\CPURegister.cs" />
     <Compile Include="Peripherals\CPU\IControllableCPU.cs" />
     <Compile Include="Utilities\ConfigurationManager.cs" />
     <Compile Include="Testing\LEDTester.cs" />
