[#28291] Extract CPUCore and BaseCPU
Split the `TranslationCPU` into subclasses that
does not interface with tlib directly to allow for
easier implementation of alternative CPU solutions
in the future.

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -256,6 +256,8 @@
     <Compile Include="Peripherals\CPU\TranslationCPU_OpcodesCounting.cs" />
     <Compile Include="Peripherals\CPU\TranslationCPU_Profiler.cs" />
     <Compile Include="Peripherals\CPU\CpuBitness.cs" />
+    <Compile Include="Peripherals\CPU\BaseCPU.cs" />
+    <Compile Include="Peripherals\CPU\CPUCore.cs" />
     <Compile Include="Peripherals\CPU\Synchronizer.cs" />
     <Compile Include="Peripherals\CPU\Disassembler\IDisassembler.cs" />
     <Compile Include="Peripherals\CPU\Disassembler\IDisassemblable.cs" />
