[#35228] CRCEngine: Change API and implementation
Use lookup table algorithm
Add support for different CRC algorithms
Update CRCEngine usage at SlipRadio, EFR32_GPCRC, CC1200 and IEEE802_15_4.Frame

--- a/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
+++ b/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Mocks\MachineTestPeripheral.cs" />
     <Compile Include="MiscTests.cs" />
     <Compile Include="BitHelperTests.cs" />
+    <Compile Include="CRCTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
