--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -423,7 +423,14 @@
     <Compile Include="Peripherals\Timers\S32K_LPIT.cs" />
     <Compile Include="Peripherals\Timers\S32K_LPTMR.cs" />
     <Compile Include="Peripherals\UART\TrivialUart.cs" />
-    <Compile Include="Peripherals\Miscellaneous\AthenaX5200.cs" />
+    <Compile Include="Peripherals\Miscellaneous\Crypto\AthenaX5200.cs" />
+    <Compile Include="Peripherals\Miscellaneous\Crypto\Endianness.cs" />
+    <Compile Include="Peripherals\Miscellaneous\Crypto\InternalMemoryAccessor.cs" />
+    <Compile Include="Peripherals\Miscellaneous\Crypto\InternalMemoryManager.cs" />
+    <Compile Include="Peripherals\Miscellaneous\Crypto\PseudorandomBitGenerator.cs" />
+    <Compile Include="Peripherals\Miscellaneous\Crypto\RSAServiceProvider.cs" />
+    <Compile Include="Peripherals\Miscellaneous\Crypto\AESServiceProvider.cs" />
+    <Compile Include="Peripherals\Miscellaneous\Crypto\MessageAuthenticationServiceProvider.cs" />
     <Compile Include="Peripherals\UART\PL011.cs" />
     <Compile Include="Peripherals\Miscellaneous\ExternalWindowMMU.cs" />
     <Compile Include="Peripherals\Video\MusteinGenericGPU.cs" />
