[#35093] Implement MAX32650_Timer

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -437,6 +437,7 @@
     <Compile Include="Peripherals\Timers\MAX32650_RTC.cs" />
     <Compile Include="Peripherals\Miscellaneous\MAX32650_PWRSEQ.cs" />
     <Compile Include="Peripherals\DMA\STM32G0DMA.cs" />
+    <Compile Include="Peripherals\Timers\MAX32650_Timer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
