[#35135] Mock MAX32650_ADC

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -439,6 +439,7 @@
     <Compile Include="Peripherals\DMA\STM32G0DMA.cs" />
     <Compile Include="Peripherals\Timers\MAX32650_Timer.cs" />
     <Compile Include="Peripherals\GPIOPort\MAX32650_GPIO.cs" />
+    <Compile Include="Peripherals\Analog\MAX32650_ADC.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
