[#34457] Peripherals: Add AmbiqApollo4_BootromLogger

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -455,6 +455,7 @@
     <Compile Include="Peripherals\Timers\MAX32650_WDT.cs" />
     <Compile Include="Peripherals\Analog\AmbiqApollo4_ADC.cs" />
     <Compile Include="Peripherals\GPIOPort\AmbiqApollo4_GPIO.cs" />
+    <Compile Include="Peripherals\Miscellaneous\AmbiqApollo4_BootromLogger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
