[#35122] Peripherals: Add AmbiqApollo4_Security

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -457,6 +457,7 @@
     <Compile Include="Peripherals\GPIOPort\AmbiqApollo4_GPIO.cs" />
     <Compile Include="Peripherals\Miscellaneous\AmbiqApollo4_BootromLogger.cs" />
     <Compile Include="Peripherals\Miscellaneous\AmbiqApollo4_PowerController.cs" />
+    <Compile Include="Peripherals\Miscellaneous\AmbiqApollo4_Security.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
