[#33566] Peripherals: Add AmbiqApollo4_SystemTimer

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -460,6 +460,7 @@
     <Compile Include="Peripherals\Miscellaneous\AmbiqApollo4_Security.cs" />
     <Compile Include="Peripherals\SPI\AmbiqApollo4_IOMaster.cs" />
     <Compile Include="Peripherals\Timers\AmbiqApollo4_RTC.cs" />
+    <Compile Include="Peripherals\Timers\AmbiqApollo4_SystemTimer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
