[#36075] Add `SensorSamplesPacket` class
It holds samples with information when to load them. Samples can be
loaded from a binary file with at least one `DataType.Header` + `Header`
entry followed by `DataType.Value` + `sampleValues` entries.

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -560,6 +560,7 @@
     <Compile Include="Utilities\FilePath.cs" />
     <Compile Include="Peripherals\CPU\CpuAbortException.cs" />
     <Compile Include="Peripherals\IHasFrequency.cs" />
+    <Compile Include="Peripherals\Sensor\SensorSamplesPacket.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
