--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -398,6 +398,7 @@
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_OneTimeProgrammableMemoryController.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_LifeCycleController.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_CSRNG.cs" />
+    <Compile Include="Peripherals\Miscellaneous\OpenTitan_MultiBitBool.cs" />
     <Compile Include="Peripherals\GPIOPort\IMXRT_GPIO.cs" />
     <Compile Include="Peripherals\UART\OpenTitan_UART.cs" />
     <Compile Include="Peripherals\Timers\OpenTitan_Timer.cs" />
