[#36829] OpenTitan_SpiHost: Add peripheral

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -469,6 +469,7 @@
     <Compile Include="Peripherals\Miscellaneous\SiLabs\EFR32xG12DeviceInformation.cs" />
     <Compile Include="Peripherals\Miscellaneous\STM32L0_RCC.cs" />
     <Compile Include="Peripherals\Sensors\LSM6DSO_IMU.cs" />
+    <Compile Include="Peripherals\SPI\OpenTitan_SpiHost.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
