[#36795] Peripherals: Add Marvell_Armada_Timer

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -525,6 +525,7 @@
     <Compile Include="Peripherals\SPI\SPIMultiplexer.cs" />
     <Compile Include="Peripherals\UART\MxcUart.cs" />
     <Compile Include="Peripherals\Timers\OMAP_Timer.cs" />
+    <Compile Include="Peripherals\Timers\Marvell_Armada_Timer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
