[#37033] Peripherals: Add STM32L0_RCC

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -463,6 +463,7 @@
     <Compile Include="Peripherals\Timers\AmbiqApollo4_RTC.cs" />
     <Compile Include="Peripherals\Timers\AmbiqApollo4_SystemTimer.cs" />
     <Compile Include="Peripherals\Miscellaneous\SiLabs\EFR32xG12DeviceInformation.cs" />
+    <Compile Include="Peripherals\Miscellaneous\STM32L0_RCC.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
