[#36586] ExecutionTracer: Split into separate classes and add compresion support

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -415,6 +415,9 @@
     <Compile Include="Peripherals\Analog\ADCChannel.cs" />
     <Compile Include="Peripherals\MemoryControllers\OpenTitan_ROMController.cs" />
     <Compile Include="Peripherals\CPU\ExecutionTracer\ExecutionTracer.cs" />
+    <Compile Include="Peripherals\CPU\ExecutionTracer\TraceWriter.cs" />
+    <Compile Include="Peripherals\CPU\ExecutionTracer\TraceFormat.cs" />
+    <Compile Include="Peripherals\CPU\ExecutionTracer\TraceWriterBuilder.cs" />
     <Compile Include="Peripherals\CPU\Disassembler\LLVMDisassembler.cs" />
     <Compile Include="Peripherals\Miscellaneous\ISideloadableKey.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_KMAC.cs" />
