--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -316,7 +316,7 @@
     <Compile Include="Peripherals\GPIOPort\LiteX_ControlAndStatus.cs" />
     <Compile Include="Peripherals\GPIOPort\LiteX_GPIO.cs" />
     <Compile Include="Peripherals\SPI\LiteX_SPI.cs" />
-    <Compile Include="Peripherals\SD\SDCapacity.cs" />
+    <Compile Include="Peripherals\SD\SDHelpers.cs" />
     <Compile Include="Peripherals\MTD\EFR32xg13FlashController.cs" />
     <Compile Include="Peripherals\USB\ValentyUSB.cs" />
     <Compile Include="Peripherals\I2C\LiteX_I2C.cs" />
