[#37459] IMX_GPTimer: Add peripheral

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -479,6 +479,7 @@
     <Compile Include="Peripherals\Miscellaneous\STM32L0_RCC.cs" />
     <Compile Include="Peripherals\Sensors\LSM6DSO_IMU.cs" />
     <Compile Include="Peripherals\SPI\OpenTitan_SpiHost.cs" />
+    <Compile Include="Peripherals\Timers\IMX_GPTimer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
