--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -480,6 +480,7 @@
     <Compile Include="Peripherals\Sensors\LSM6DSO_IMU.cs" />
     <Compile Include="Peripherals\SPI\OpenTitan_SpiHost.cs" />
     <Compile Include="Peripherals\Timers\IMX_GPTimer.cs" />
+    <Compile Include="Peripherals\Sensors\MAX86171.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
