--- a/src/Emulator/Peripherals/Peripherals_NET.csproj
+++ b/src/Emulator/Peripherals/Peripherals_NET.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" Condition=" $(OS) != 'Windows_NT'" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <Reference Include="ProtobufNet">
+      <HintPath>../../../../../lib/resources/libraries/protobuf-net.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Test\**\*"/>
