[#38014] Helpers: Introduce CadenceInterruptFlag helper

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -213,6 +213,7 @@
       <DependentUpon>BitBanding.tt</DependentUpon>
     </Compile>
     <Compile Include="Peripherals\USBDeprecated\UsbHub.cs" />
+    <Compile Include="Peripherals\Helpers\CadenceInterruptFlag.cs" />
     <Compile Include="Peripherals\UART\CadenceUart.cs" />
     <Compile Include="Peripherals\UART\Atmel91DebugUnit.cs" />
     <Compile Include="Peripherals\UART\ImxUart.cs" />
