[DEV] __ Add dumb I2C Host
This is not something we would like to keep, just a quick stub to be able to tests logic

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -464,6 +464,7 @@
     <Compile Include="Peripherals\GPIOPort\MAX32650_GPIO.cs" />
     <Compile Include="Peripherals\Analog\MAX32650_ADC.cs" />
     <Compile Include="Peripherals\Mocks\HPSHostController.cs" />
+    <Compile Include="Peripherals\Mocks\I2CHost.cs" />
     <Compile Include="Peripherals\Miscellaneous\MAX32650_TPU.cs" />
     <Compile Include="Peripherals\SPI\MAX32650_SPI.cs" />
     <Compile Include="Peripherals\Miscellaneous\BitAccess.cs" />
