--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -450,6 +450,7 @@
     <Compile Include="Peripherals\UART\PL011.cs" />
     <Compile Include="Peripherals\Miscellaneous\WindowIOMMU.cs" />
     <Compile Include="Peripherals\Miscellaneous\ExternalWindowMMU.cs" />
+    <Compile Include="Peripherals\Mocks\SimpleDMA.cs" />
     <Compile Include="Peripherals\Video\MusteinGenericGPU.cs" />
     <Compile Include="Peripherals\UART\SAMD5_UART.cs" />
     <Compile Include="Peripherals\Miscellaneous\LiteX_MMCM_CSR32.cs" />
