[#37360] IOMMU: Create WindowMMUBusController

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Peripherals\Bus\BusAccessPrivileges.cs" />
     <Compile Include="Peripherals\Bus\SystemBus.cs" />
     <Compile Include="Peripherals\Bus\BusControllerProxy.cs" />
+    <Compile Include="Peripherals\Bus\WindowMMUBusController.cs" />
     <Compile Include="Peripherals\Bus\PeripheralCollection.cs" />
     <Compile Include="Peripherals\Bus\UnhandledAccessBehaviour.cs" />
     <Compile Include="Peripherals\Bus\PeripheralAccessMethods.cs" />
