--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -485,6 +485,7 @@
     <Compile Include="Peripherals\Miscellaneous\STM32L0_RCC.cs" />
     <Compile Include="Peripherals\Sensors\LSM6DSO_IMU.cs" />
     <Compile Include="Peripherals\SPI\OpenTitan_SpiHost.cs" />
+    <Compile Include="Peripherals\SPI\Cadence_SPI.cs" />
     <Compile Include="Peripherals\Timers\IMX_GPTimer.cs" />
     <Compile Include="Peripherals\Sensors\MAX86171.cs" />
     <Compile Include="Peripherals\Sensors\TMP103.cs" />
