[#38233] OpenTitan: Add AonTimer model

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -416,6 +416,7 @@
     <Compile Include="Peripherals\GPIOPort\IMXRT_GPIO.cs" />
     <Compile Include="Peripherals\UART\OpenTitan_UART.cs" />
     <Compile Include="Peripherals\Timers\OpenTitan_Timer.cs" />
+    <Compile Include="Peripherals\Timers\OpenTitan_AonTimer.cs" />
     <Compile Include="Peripherals\MTD\OpenTitan_FlashController.cs" />
     <Compile Include="Peripherals\SPI\IMXRT_FlexSPI.cs" />
     <Compile Include="Peripherals\SPI\IMXRT_LPSPI.cs" />
