--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Peripherals\Video\PL110.cs" />
     <Compile Include="Peripherals\Video\TegraDisplay.cs" />
     <Compile Include="Peripherals\Network\SMC91X.cs" />
+    <Compile Include="Peripherals\I2C\Cadence_I2C.cs" />
     <Compile Include="Peripherals\I2C\XIIC.cs" />
     <Compile Include="Peripherals\I2C\VybridI2C.cs" />
     <Compile Include="Peripherals\I2C\OpenCoresI2C.cs" />
