--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -299,6 +299,7 @@
     <Compile Include="Peripherals\CPU\ICPUWithMappedMemory.cs" />
     <Compile Include="Peripherals\CPU\ICPUWithRegisters.cs" />
     <Compile Include="Peripherals\CPU\ICPUWithOpcodeHooks.cs" />
+    <Compile Include="Peripherals\CPU\ICPUWithMemoryAccessHooks.cs" />
     <Compile Include="Peripherals\CPU\IInitableCPU.cs" />
     <Compile Include="Peripherals\CPU\CPURegister.cs" />
     <Compile Include="Utilities\ConfigurationManager.cs" />
